--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section class="abstractimg">
   </section>
     <section id="about" class="body-section">
-      <h2 class="section-header">about.</h2>
+<!--      <h2 class="section-header">about.</h2>-->
 <b class="big-b">Some things about me <span class="bigger">&darr;</span></b>
       <table id="about-table">
                 <tr>
@@ -139,6 +139,12 @@
         </a>
 
 </div>
+    <div class="row">
+      <a href="/work/debbarsoum/" class="column" id="debbarsoum-column">
+        <h3>Deb Barsoum Photography</h3>
+        <p>webdev / artistic snapshots</p>
+        </a>
+        <div class="column"></div>
       </div>
 
         <div class="blockquote-wrapper">
