added final info for escuela

--- a/work/escuela/index.html
+++ b/work/escuela/index.html
@@ -44,7 +44,7 @@
       <tr>
         <td>
           <h2>Challenge</h2>
-          <p>To learn the <b>Swift programming language</b> and build an app that would drastically <b>improve student productivity</b>. The app would provide a variety of features at no cost, including <b>notes, an agenda, and todo lists</b>. The app would be designed for functionality as opposed to appearance (<b>UX over UI</b>), giving it a simplistic yet utilitarian feel.</p>
+          <p>To learn the <b>Swift programming language</b> and build an app that would drastically <b>improve student productivity</b>. The app would provide a variety of features at no cost, such as <b>notes, an agenda, and todo lists</b>. The app would be designed for functionality as opposed to appearance (<b>UX over UI</b>), giving it a simplistic yet utilitarian feel.</p>
         </td>
         <td id="challenge-img"></td>
       </tr>
@@ -56,7 +56,9 @@
         <td id="role-img"></td>
         <td>
           <h2>Role</h2>
-          <p>For my <b>IB MYP Personal Project,</b> I taught myself Swift using resources on the internet. I performed <b>app design</b>, content development, and feature coordination for the app, guiding it from start to finish. I did everything from sketching to building.</p>
+          <p>For my <b>IB MYP Personal Project,</b> I taught myself Swift using resources on the internet. I performed <b>app design</b>, content development, and feature coordination for the app, guiding it from start to finish. I did <b>everything from sketching to building.</b></p>
+          <p class="visit"><a href="https://github.com/itbarsoum99/escuela">View code &#8599;</a></p>
+
         </td>
         <td id="role-img-2"></td>
 
@@ -69,7 +71,11 @@
       <tr>
         <td>
           <h2>Results</h2>
-          <p>This project is <b>still underway.</b></p>
+          <p>The final result is a student productivity app with <b>tasks, notes, and a timer</b> to help students work and reduce procrastination. The design is minimalistic and conforms to commonly utilized Apple design standards. It implements a variety of <b>data persistence</b> techniques to introduce true functionality.</p>
+          <p class="visit">
+          <a href="https://testflight.apple.com/join/s0Rxlid6">Become a beta tester &#8599;</a>
+          </p>
+          
         </td>
         <td id="results-img"></td>
       </tr>
